# ImageClassification

./: README.md  build.gradle.kts
App1/src/androidTest/java/com/aanchal/imageclassification/: ExampleInstrumentedTest.kt
App1/src/main/: AndroidManifest.xml
App1/src/main/cpp/: CMakeLists.txt  imageclassification.cpp
App1/src/main/java/com/aanchal/imageclassification/: ChooseScreen.kt  NNAPIClass.kt
App1/src/main/java/com/aanchal/imageclassification/ui/theme/: Theme.kt
App1/src/main/ml/: model.tflite
src/androidTest/java/com/aanchal/imageclassification/: ExampleInstrumentedTest.kt
src/main/java/com/aanchal/imageclassification/: ChooseScreen.kt  MainActivity.kt  NNAPIClass.kt  ScreenImage.kt
src/main/java/com/aanchal/imageclassification/ui/theme/: Color.kt  Type.kt
src/test/java/com/aanchal/imageclassification/: ExampleUnitTest.kt
